calico/tigera-manager-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: tigera-manager-external
  namespace: tigera-manager
  annotations:
  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ports:
  - port: 9443
    protocol: TCP
  selector:
    k8s-app: tigera-manager
  sessionAffinity: None

 ---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tigera-manager
  namespace: tigera-manager
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: calico.aws
    http:
      paths:
      - backend:
          serviceName: tigera-manager-external
          servicePort: 9443
